# efm-lib

./: CMakeLists.txt  README.md
CMakeConfig/: arm-none-eabi.cmake
Docs/: GNU ARM Assembler.txt  GNU ARM C compiler.txt  GNU ARM C++ compiler.txt
build-command/: GNU C++ linker.txt
cmake/: arm-none-eabi.cmake
src/: CMakeLists.txt  dac_4725.h  main.c
src/flash/: flash.c  flash.h
src/serial/: serial.c  serial.h
